fixed alignment

--- a/style.css
+++ b/style.css
@@ -30,10 +30,13 @@ img {
     overflow: hidden;
 }
 
-.icons {
-    letter-spacing: 20px;
+.icons .mail {
+  margin-right: 40px;
 }
 
+.icons .linkedin{
+  margin-left: 40px;
+}
 a {
     text-decoration: none;
 }
@@ -56,12 +59,3 @@ a:visited {
 .linkedin:hover {
     color: #3AC8E8;
 }
-
-/*
-a:hover {
-    color: #006A6B;
-}*/
-
-
-
-
